version/0.24/_sources/api/solver/_autosummary/settings/fast_transient_settings.rst.txt
:orphan:

.. _fast_transient_settings:

fast_transient_settings
=======================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.fast_transient_settings.fast_transient_settings
    :show-inheritance:

.. rubric:: Attributes

======================================================   ==================================================================

Attribute                                                                                                           Summary

======================================================   ==================================================================
:ref:`update_stage_gradients <update_stage_gradients>`       Update/freeze reconstruction gradients at each explicit stage.

:ref:`runge_kutta <runge_kutta>`                                                      Enter Runge-Kutta schemes setup menu.

======================================================   ==================================================================

.. rubric:: Included in:

============================   ========================================

Parent                                                          Summary

============================   ========================================
:ref:`advanced <advanced_3>`       Enter solution method advanced menu.

============================   ========================================

